[package]
name = "lineriver"
description = "Non-blocking buffered line reader for Read objects"
version = "0.3.0"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/lineriver"
repository = "https://github.com/lpenz/lineriver"
categories = ["filesystem"]
keywords = ["io", "non-blocking"]


[dependencies]
libc = "0.2.147"
memchr = "2.5.0"
tracing = "0.1.37"

[dev-dependencies]
color-eyre = "0.6.2"
polling = "2.8.0"
env_logger = "0.10.0"
test-log = { version = "0.2.12", features = ["trace"] }
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
