[package]
name = "lineriver"
description = "Non-blocking buffered line reader for Read objects"
version = "0.7.1"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/lineriver"
repository = "https://github.com/lpenz/lineriver"
categories = ["filesystem"]
keywords = ["io", "non-blocking"]


[dependencies]
libc = "0.2.174"
memchr = "2.7.5"
tracing = "0.1.41"

[dev-dependencies]
color-eyre = "0.6.5"
polling = "3.8.0"
env_logger = "0.11.8"
test-log = { version = "0.2.18", features = ["trace"] }
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
